# q3ide

./: .gitignore  AGENTS.md  DOWNLOAD_MODELS_GUIDE.md  LICENSE  MODELS_README.md  MODS_README.md  Q3IDE_OPTIMALIZATION_TRICKS.md  Q3IDE_PROMPT.md  Q3T_VISIONOS_DESIGN.md  Q3_CONF.md  Q3_HD_UPGRADE_PROCEDURE.md  QUAKE3_MODELS_RESEARCH.md  QUAKE3_MODEL_URLS.txt  QUICK_REFERENCE_MODELS.txt  README.md  TODO.md  VISION.md  q3ide_capture.h  q3ide_design.h  q3ide_main.c
.agents/: LOOP.md  PARALLEL_AGENTS.md  PROJECT_LOOP.md
baseq3/: autoexec.cfg  q3ide_autocmd.cfg  q3ide_shaders.pk3  test_worldspawn.html
capture/: Cargo.toml  Cargo_test.toml  build.rs  cbindgen.toml  test_capture.rs
capture/screencapturekit-rs/: Cargo.toml
capture/screencapturekit-rs/src/: lib.rs
capture/screencapturekit-rs/src/stream/: sc_stream.rs
capture/screencapturekit-rs/src/utils/: completion.rs
capture/screencapturekit-rs/swift-bridge/Sources/ScreenCaptureKitBridge/: Core.swift  ShareableContent.swift
capture/src/: backend.rs  lib.rs  ringbuf.rs  router.rs  screencapturekit.rs  window.rs
config/: default_hotkeys.toml  default_layout.json
docs/: APPLE_SCK.md
engine/: adapter.h
missionpack/: cgame.dylib  qagame.dylib  ui.dylib
plan/: 02-Q3IDE_INITIAL_PROMPT.md  02-VISIONOS_DESIGN_LANGUAGE.md  03-Q3IDE_ORCHESTRATION.md  04-Q3IDE_SPECIFICATION.md  05-Q3IDE_PERFORMANCE_OPTIMALIZATION.md  06-Q3IDE_OPTIMIZATION_TRICKS.md  07-Q3_HD_UPGRADE_PROCEDURE.md  08-WINDOW_RULES.md  09-WINDOW_PLACEMENT_SYSTEM.md  09-WINDOW_PROMT.md  10-Q3IDE_ARCHITECTURE.md  11-Q3IDE_UML_MERMAID.md  (+1 more)
(+357 files in other folders)
